--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.4",
   "description": "An Oanda API wrapper for Vue.js",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mthelm85/oanda-vue"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
